# numerical_projects_2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  format.sh
src/bessel_example/: bessel.cpp  odeint_runner.cpp  odeint_runner.h  odeint_runner.hpp
src/boost_example/: odeint.cpp  odeint_bessel.cpp
src/eigen_example/: example.cpp
src/first_example/: bessel.cpp  odeint_runner.hpp
